// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test car data retrieval should get 2 cars from db 1`] = `
Object {
  "data": Array [
    Object {
      "client_id": null,
      "dkm": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "client_id": null,
      "dkm": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get a car from db 1`] = `
Object {
  "data": Object {
    "client_id": null,
    "dkm": "CA4918KM",
    "id": 4601,
    "mark_name": "Volkswagen",
    "model_name": "Passat",
    "produce_year": 1992,
    "rama": "YGHJHKLLOLIHGHG",
  },
}
`;

exports[`Test car data retrieval should get cars from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "client_id": null,
      "dkm": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "client_id": null,
      "dkm": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test car data retrieval should get cars from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "client_id": null,
      "dkm": "CA4918KM",
      "id": 4601,
      "mark_name": "Volkswagen",
      "model_name": "Passat",
      "produce_year": 1992,
      "rama": "YGHJHKLLOLIHGHG",
    },
    Object {
      "client_id": null,
      "dkm": "CA7474KA",
      "id": 4602,
      "mark_name": "Audi",
      "model_name": "A8",
      "produce_year": 2008,
      "rama": "WVWEZZZ1HZRW206119",
    },
  ],
  "total": 1376287,
}
`;

exports[`Test companies data retrieval should get 2 companies from db 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0,00",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vehicle_ids": "1863595,1687957,1687957,1687957,6001,1687957,6001",
      "vhod": "0",
    },
    Object {
      "apartment": "27",
      "blok": "1",
      "bulstat": "130988423",
      "city": "СОФИЯ",
      "client_name": "\\\\ Мечкуеви Ко \\\\ ООД  ",
      "floor": "2,00",
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "Незабравка",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "Б",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get a company from db 1`] = `
Object {
  "data": Object {
    "apartment": "0",
    "blok": "0",
    "bulstat": "175153616",
    "city": "ЛОЗЕН",
    "client_name": "Бонев Транс ЕООД  ",
    "floor": "0,00",
    "id": 9351,
    "mobile": "0",
    "municipality_name": "Столична",
    "phone": "0",
    "postcode": "1151,00",
    "region_name": "София (столица)",
    "representative": null,
    "street_name": "ЯНКО ПАНАЙОТОВ",
    "street_no": "28",
    "vehicle_ids": "1863595,1687957,1687957,1687957,6001,1687957,6001",
    "vhod": "0",
  },
}
`;

exports[`Test companies data retrieval should get companies from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0,00",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vehicle_ids": "1863595,1687957,1687957,1687957,6001,1687957,6001",
      "vhod": "0",
    },
    Object {
      "apartment": "27",
      "blok": "1",
      "bulstat": "130988423",
      "city": "СОФИЯ",
      "client_name": "\\\\ Мечкуеви Ко \\\\ ООД  ",
      "floor": "2,00",
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "Незабравка",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "Б",
    },
  ],
  "total": 78689,
}
`;

exports[`Test companies data retrieval should get companies from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "0",
      "blok": "0",
      "bulstat": "175153616",
      "city": "ЛОЗЕН",
      "client_name": "Бонев Транс ЕООД  ",
      "floor": "0,00",
      "id": 9351,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1151,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЯНКО ПАНАЙОТОВ",
      "street_no": "28",
      "vehicle_ids": "1863595,1687957,1687957,1687957,6001,1687957,6001",
      "vhod": "0",
    },
    Object {
      "apartment": "27",
      "blok": "1",
      "bulstat": "130988423",
      "city": "СОФИЯ",
      "client_name": "\\\\ Мечкуеви Ко \\\\ ООД  ",
      "floor": "2,00",
      "id": 9851,
      "mobile": "0",
      "municipality_name": "Столична",
      "phone": "0",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "Незабравка",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "Б",
    },
  ],
  "total": 78689,
}
`;

exports[`Test persons data retrieval should get 2 persons from db 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "2",
      "blok": "18",
      "bulstat": "6310305565",
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "floor": "1,00",
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": "7500,00",
      "region_name": "СИЛИСТРА",
      "representative": null,
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vehicle_ids": null,
      "vhod": "А",
    },
    Object {
      "apartment": "7",
      "blok": "9",
      "bulstat": "5507181593",
      "city": "СОФИЯ",
      "client_name": "Николинка Стефанова Цолова",
      "floor": "4,00",
      "id": 9451,
      "mobile": "0897527002",
      "municipality_name": "Столична",
      "phone": "0888998899",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЛЮБЛАНА",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "a",
    },
  ],
  "total": 1030889,
}
`;

exports[`Test persons data retrieval should get a person from db 1`] = `
Object {
  "data": Object {
    "apartment": "2",
    "blok": "18",
    "bulstat": "6310305565",
    "city": "СИЛИСТРА",
    "client_name": "First Middle Last",
    "floor": "1,00",
    "id": 9219,
    "mobile": "0891043493",
    "municipality_name": "Силистра",
    "phone": "02830123",
    "postcode": "7500,00",
    "region_name": "СИЛИСТРА",
    "representative": null,
    "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
    "street_no": "",
    "vehicle_ids": null,
    "vhod": "А",
  },
}
`;

exports[`Test persons data retrieval should get persons from db with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "2",
      "blok": "18",
      "bulstat": "6310305565",
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "floor": "1,00",
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": "7500,00",
      "region_name": "СИЛИСТРА",
      "representative": null,
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vehicle_ids": null,
      "vhod": "А",
    },
    Object {
      "apartment": "7",
      "blok": "9",
      "bulstat": "5507181593",
      "city": "СОФИЯ",
      "client_name": "Николинка Стефанова Цолова",
      "floor": "4,00",
      "id": 9451,
      "mobile": "0897527002",
      "municipality_name": "Столична",
      "phone": "0888998899",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЛЮБЛАНА",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "a",
    },
  ],
  "total": 1030889,
}
`;

exports[`Test persons data retrieval should get persons from db with sorting 1`] = `
Object {
  "data": Array [
    Object {
      "apartment": "2",
      "blok": "18",
      "bulstat": "6310305565",
      "city": "СИЛИСТРА",
      "client_name": "First Middle Last",
      "floor": "1,00",
      "id": 9219,
      "mobile": "0891043493",
      "municipality_name": "Силистра",
      "phone": "02830123",
      "postcode": "7500,00",
      "region_name": "СИЛИСТРА",
      "representative": null,
      "street_name": "ГЕНЕРАЛ  СКОБЕЛЕВ",
      "street_no": "",
      "vehicle_ids": null,
      "vhod": "А",
    },
    Object {
      "apartment": "7",
      "blok": "9",
      "bulstat": "5507181593",
      "city": "СОФИЯ",
      "client_name": "Николинка Стефанова Цолова",
      "floor": "4,00",
      "id": 9451,
      "mobile": "0897527002",
      "municipality_name": "Столична",
      "phone": "0888998899",
      "postcode": "1000,00",
      "region_name": "София (столица)",
      "representative": null,
      "street_name": "ЛЮБЛАНА",
      "street_no": "1",
      "vehicle_ids": null,
      "vhod": "a",
    },
  ],
  "total": 1030889,
}
`;
